--- a/gleam-sdk/sdk/gleam.toml
+++ b/gleam-sdk/sdk/gleam.toml
@@ -12,8 +12,8 @@ repository = {type = "github", user = "fluentci-io", repo = "daggerverse"}
 [dependencies]
 envoy = "~> 1.0"
 glance = "~> 0.8"
-gleam_hackney = "~> 1.2"
 gleam_http = "~> 3.5"
+gleam_httpc = "~> 2.1"
 gleam_json = "~> 0.7"
 gleam_stdlib = "~> 0.32"
 
